force-app/main/default/objects/onemergefree__MergeRule__mdt/onemergefree__MergeRule__mdt.object-meta.xml
<CustomObject>
    <description>Merge Rules associated to a parent Merge Ruleset.</description>
    <label>Merge Rule</label>
    <pluralLabel>Merge Rules</pluralLabel>
</CustomObject>