force-app/main/default/objects/onemergefree__MergeRule__mdt/fields/onemergefree__IsActive__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If FALSE, the Merge Rule is not processed by merge operations.</description>
    <inlineHelpText>If FALSE, the Merge Rule is not processed by merge operations.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>