force-app/main/default/objects/onemergefree__MergeRule__mdt/fields/onemergefree__MergeRuleset__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeRuleset__c</fullName>
    <description>Parent Merge Ruleset.</description>
    <inlineHelpText>Parent Merge Ruleset.</inlineHelpText>
    <label>Merge Ruleset</label>
    <referenceTo>onemergefree__MergeRuleset__mdt</referenceTo>
    <relationshipLabel>Merge Rules</relationshipLabel>
    <relationshipName>MergeRules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>