force-app/main/default/objects/onemergefree__MergeRule__mdt/fields/onemergefree__Priority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__Priority__c</fullName>
    <description>Merge Rule Priority determines how valid Source Record values are prioritised for Master Record population.</description>
    <inlineHelpText>Merge Rule Priority determines how valid Source Record values are prioritised for Master Record population.</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newest</fullName>
                <default>true</default>
                <label>Newest</label>
            </value>
            <value>
                <fullName>Oldest</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>