force-app/main/default/objects/onemergefree__MergeRule__mdt/fields/onemergefree__SecondaryPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SecondaryPriority__c</fullName>
    <description>Merge Rule Secondary Priority determines how valid Source Record values are prioritised for Master Record population.</description>
    <inlineHelpText>Merge Rule Secondary Priority determines how valid Source Record values are prioritised for Master Record population.</inlineHelpText>
    <label>Secondary Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newest</fullName>
            </value>
            <value>
                <fullName>Oldest</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>