force-app/main/default/objects/onemergefree__MergeRule__mdt/fields/onemergefree__SecondaryPriorityField__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SecondaryPriorityField__c</fullName>
    <description>The field which provides the Merge Rule Secondary Priority. If set to a blank value, a Merge Rule Field record should be added with a matching data type and flagged with Is Secondary Priority?. 

E.g. Merge Rule Field: Address Last Updated, Is Secondary Priority?=TRUE.</description>
    <inlineHelpText>The field which provides the Merge Rule Secondary Priority. If set to a blank value, a Merge Rule Field record should be added with a matching data type and flagged with Is Secondary Priority?. 

E.g. Merge Rule Field: Address Last Updated, Is Secondary Priority?=TRUE.</inlineHelpText>
    <label>Secondary Priority Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreatedDate</fullName>
                <label>Created Date</label>
            </value>
            <value>
                <fullName>LastModifiedDate</fullName>
                <label>Last Modified Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>